--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "daisyui": "^4.7.2",
     "flowbite": "^2.3.0",
     "flowbite-vue": "^0.0.6",
+    "preline": "^2.0.3",
     "tailwindcss-animated": "^1.0.1",
     "vue": "^3.4.15",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue3-toastify": "^0.2.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.3",
